Fixing alignment

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ main {
     position: relative;
     transition: border-color 0.1s ease;
     width: 24px;
+    font-size: 2px;
 }
 #combo-lock #combination .wheel .increment:active,
 #combo-lock #combination .wheel .decrement:active {
